update contest verbiage, make contest sections more prominent, fix revealed solution word wrap issue

--- a/platform/resources/less/colors.less
+++ b/platform/resources/less/colors.less
@@ -1,3 +1,7 @@
 @challenge_easy: #84E47F;
 @challenge_medium: #E4E37F;
 @challenge_hard: #E47F8D;
+
+.green {
+    color: #8AECB4;
+}
