--- a/platform/resources/less/em/contests/contest.less
+++ b/platform/resources/less/em/contests/contest.less
@@ -33,8 +33,11 @@
         }
         .solution {
             padding-top: 10px;
+            font-size: 12px;
             font-family: monospace;
             word-wrap: break-word;
+            color: #fff;
+            margin-bottom: 0;
         }
     }
 }
