--- a/platform/resources/less/em/contests/home.less
+++ b/platform/resources/less/em/contests/home.less
@@ -31,6 +31,7 @@
             img {
                 width: 32px;
                 height: 32px;
+                margin-bottom: 4px;
             }
         }
     }
